crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__one_of_non_integer_const.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"const\":1.5}},\"required\":[\"k\"],\"type\":\"object\"},{\"properties\":{\"k\":{\"const\":2.5}},\"required\":[\"k\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let mut matched = match instance {
                serde_json::Value::Object(obj) => {
                    (obj.contains_key("k"))
                        && ({
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "k" => {
                                            static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                            {
                                                serde_json::from_str("1.5")
                                                    .expect("Failed to parse const number")
                                            });
                                            match instance {
                                                serde_json::Value::Number(n) => {
                                                    jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                }
                                                _ => false,
                                            }
                                        }
                                        _ => true,
                                    }
                                })
                        })
                }
                _ => false,
            };
            (if match instance {
                serde_json::Value::Object(obj) => {
                    (obj.contains_key("k"))
                        && ({
                            obj.iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "k" => {
                                            static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                            {
                                                serde_json::from_str("2.5")
                                                    .expect("Failed to parse const number")
                                            });
                                            match instance {
                                                serde_json::Value::Number(n) => {
                                                    jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                }
                                                _ => false,
                                            }
                                        }
                                        _ => true,
                                    }
                                })
                        })
                }
                _ => false,
            } {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
