crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"pattern\":\"^[a-z]+$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => __jsonschema_regex_0(s),
            _ => false,
        }
