crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_no_whitespace.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"pattern\":\"^\\\\S*$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => {
                !s.chars().any(jsonschema::__private::regex::is_ecma_whitespace)
            }
            _ => false,
        }
