crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_prefix.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"pattern\":\"^abc\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => s.starts_with("abc"),
            _ => false,
        }
